# Crewai-Agent

./: README.md  pyproject.toml
output/: curriculum.md  lesson_plan.md  quizzes.md
src/online_course_builder/: crew.py  main.py
src/online_course_builder/config/: agents.yaml  tasks.yaml
